--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,33 +17,33 @@
             <h4>FRONT-END MASTER</h4>
         </div>
     </header>
-    <section>
+    <section class="main">
         <div class="row">
             <img class="cover" src="img/cover.png" alt="Cover Photo">
         </div>
         <div class="row">
-            <h2>Featured Work</h2>
+            <h2 class="workTitle">Featured Work</h2>
         </div>
         <div class="projects row">
             <div class="project col-4">
                 <img class="projImage" src="img/proj1.png" alt="Project 1 image">
                 <div class="title">APPIFY</div>
                 <div class="desc">
-                    <p><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></p>
+                    <p><a href="https://github.com/udacity/Appify/">My first app - Appify</a></p>
                 </div>
             </div>
             <div class="project col-4">
                 <img class="projImage" src="img/proj2.png" alt="Project 2 image">
                 <div class="title">SUNFLOWER</div>
                 <div class="desc">
-                    <p><a href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a></p>
+                    <p><a href="https://github.com/udacity/Sunflower/">My second app - Sunflower</a></p>
                 </div>
             </div>
             <div class="project col-4">
                 <img class="projImage" src="img/proj3.png" alt="Porject 3 image">
                 <div class="title">BOKEH</div>
                 <div class="desc">
-                    <p><a href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a></p>
+                    <p><a href="https://github.com/udacity/Bokeh/">My 3rd app - Bokeh</a></p>
                 </div>
             </div>
         </div>
