--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,6 +48,6 @@
             </div>
         </div>
     </section>
-    <footer>By Anthony Ng © 2017</righ></footer>
+    <footer>By Anthony Ng © 2017</footer>
 </body>
 </html>
